# git-time-machine

./: .gitignore  .gitignore-copilot  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.copilot/: README.md  context.json  instructions.md  settings.json
.github/instructions/: copilot.instructions.md  project-desc.instructions.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/handlers/: blame.rs  commits.rs  diff.rs  metadata.rs  mod.rs
src/models/: git.rs  mod.rs  tool_schema.rs
src/utils/: git_helpers.rs  mod.rs
