[package]
name = "git-time-machine"
version = "0.1.0"
edition = "2021"
description = "An MCP server that provides Git history insights to AI assistants"
authors = ["Hrirkslab <hrirkslab@gmail.com>"]
license = "MIT"
repository = "https://github.com/hrirkslab/git-time-machine"
homepage = "https://github.com/hrirkslab/git-time-machine"
documentation = "https://github.com/hrirkslab/git-time-machine/blob/main/README.md"
keywords = ["git", "mcp", "ai", "copilot", "history"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Web framework
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }

# Git integration
git2 = "0.18.3"

# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# OpenAPI spec generation
utoipa = { version = "4.2.0", features = ["axum_extras"] }

# Utilities
thiserror = "1.0.57"
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
